app/00-ns-and-sa.yaml
apiVersion: v1
kind: Namespace
metadata:
  #colocar nombre del namespace de la app
  name: app
