app/01-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  namespace: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      #descomentar si tienes un secret
      #imagePullSecrets:
      #- name: regcred
      containers:
      - name: app
        image: gcr.io/google-samples/hello-app:1.0
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
